--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: breakpoints
-description: A new Flutter package.
-version: 0.0.1
-homepage: https://github.com/koji-1009/breakpoints
+name: breakpoints_mq
+description: A lightweight library for implementing Responsive layout grid. Provide window, columns, margings/gutters.
+version: 1.0.0
+homepage: https://github.com/koji-1009/breakpoints_mq
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
