--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,5 +12,8 @@ dependencies:
   breakpoints_mq:
     path: ../
 
+dev_dependencies:
+  flutter_lints: ^1.0.4
+
 flutter:
   uses-material-design: true
